Updated the navbar and Leave request UI

--- a/LeaveAppUI/src/app/notifyleave/notifyleave.component.css
+++ b/LeaveAppUI/src/app/notifyleave/notifyleave.component.css
@@ -1,3 +1,6 @@
+.container-notifyleave{
+  margin-top:80px;
+}
 .page-wrapper::before {
   content: "";
   position: absolute;
@@ -25,4 +28,8 @@
 ::ng-deep ng-select .ng-option {
   font-weight: normal !important;
 }
+body {
+  padding-top: 70px; 
+}
+
 
