--- a/LeaveAppUI/src/app/notifyleave/notifyleave.component.html
+++ b/LeaveAppUI/src/app/notifyleave/notifyleave.component.html
@@ -23,23 +23,18 @@
 
         <div class="mb-3 fw-bold">
           <label for="availedBy" class="form-label"><span class="text-danger">*</span>Availed By </label>
-<<<<<<< HEAD
-          <ng-select [items]="listOfUsers" bindLabel="name"   bindValue="name" placeholder="Enter Username"
-            formControlName="availedBy" [searchable]="true" [clearable]="true" [ngClass]="{'is-invalid': leaveForm.get('availedBy')?.invalid && leaveForm.get('availedBy')?.touched}">
-=======
           <ng-select  [items]="filteredUsers"
-    bindLabel="name"
-    bindValue="name"
-    placeholder="Enter Username"
-    formControlName="availedBy"
-    [searchable]="true"
-    [clearable]="true"
-    [loading]="loading"
-    (search)="onSearch($event)"
-    [ngClass]="{
-      'is-invalid': leaveForm.get('availedBy')?.invalid && leaveForm.get('availedBy')?.touched
-    }">
->>>>>>> 2d898a599b3efeb2f7bf82ce72e7c116bb4b48bc
+              bindLabel="name"
+              bindValue="name"
+              placeholder="Enter Username"
+              formControlName="availedBy"
+              [searchable]="true"
+              [clearable]="true"
+              [loading]="loading"
+              (search)="onSearch($event)"
+              (input)="onInputChange($event)"
+              [ngClass]="{
+                'is-invalid': leaveForm.get('availedBy')?.invalid && leaveForm.get('availedBy')?.touched}">
             <ng-template ng-option-tmp let-item="item">
               {{ item.name }} — {{ item.userEmail }}
             </ng-template>
@@ -48,6 +43,8 @@
             <small *ngIf="leaveForm.get('availedBy')?.hasError('required')">This field is required.</small>
           </div>
         </div>
+
+
 
 
         <div class="mb-3 fw-bold">
@@ -121,11 +118,22 @@
         <div class="mb-3  ">
           <label for="backupContact" class="form-label fw-bold"><span class="text-danger ">*</span>Backup Contact(s) <span
               class="small text-muted">(Acc Peer only. If none, add Supervisor)</span></label>
-          <ng-select #backup [items]="listOfUsers" bindLabel="userEmail" bindValue="userEmail" [multiple]="true"
-            placeholder="Select Backup Contact(s)" formControlName="backupContact" [closeOnSelect]="false"
-            [searchable]="true" [clearable]="true" (change)="onBackupChange()" [ngClass]="{
-    'is-invalid': leaveForm.get('backupContact')?.invalid && leaveForm.get('backupContact')?.touched
-  }">
+          <ng-select #backup
+          [items]="filteredBackupUsers"
+          bindLabel="userEmail"
+          bindValue="userEmail"
+          [multiple]="true"
+          placeholder="Select Backup Contact(s)"
+          formControlName="backupContact"
+          [closeOnSelect]="false"
+          [searchable]="true"
+          [clearable]="true"
+          (change)="onBackupChange()"
+          (search)="onBackupSearch($event)"
+          (input)="onBackupInput($event)"
+          [ngClass]="{
+            'is-invalid': leaveForm.get('backupContact')?.invalid && leaveForm.get('backupContact')?.touched
+          }">
           </ng-select>
           <ng-template ng-option-tmp let-item="item">
             {{ item.name }} — {{ item.email }}
@@ -139,15 +147,27 @@
         </div>
 
 
+
         <div class="mb-3 ">
           <label for="notifyTo" class="form-label fw-bold"><span class="text-danger">*</span>Notify To Recipient(s)
             <span class="small text-muted">(Must add- Acc Supervisor)</span></label>
 
-          <ng-select #notify [items]="listOfUsers" bindLabel="userEmail" bindValue="userEmail" [multiple]="true"
-            placeholder='Select Recipient(s)' formControlName="notifyTo" [closeOnSelect]="false"
-            [searchable]="true" [clearable]="true" (change)="onNotifyChange()" [ngClass]="{
-      'is-invalid': leaveForm.get('notifyTo')?.invalid && leaveForm.get('notifyTo')?.touched
-    }">
+          <ng-select #notify
+          [items]="filteredNotifyUsers"
+          bindLabel="userEmail"
+          bindValue="userEmail"
+          [multiple]="true"
+          placeholder="Select Recipient(s)"
+          formControlName="notifyTo"
+          [closeOnSelect]="false"
+          [searchable]="true"
+          [clearable]="true"
+          (change)="onNotifyChange()"
+          (search)="onNotifySearch($event)"
+          (input)="onNotifyInput($event)"
+          [ngClass]="{
+            'is-invalid': leaveForm.get('notifyTo')?.invalid && leaveForm.get('notifyTo')?.touched
+          }">
           </ng-select>
           <ng-template ng-option-tmp let-item="item">
             {{ item.name }} — {{ item.email }}
@@ -244,7 +264,5 @@
     </div>
   </div>
 </div>
-<<<<<<< HEAD
 </div>
-=======
->>>>>>> 2d898a599b3efeb2f7bf82ce72e7c116bb4b48bc
+
