Leave Request data to show latest data

--- a/LeaveAppUI/src/app/notifyleave/notifyleave.component.css
+++ b/LeaveAppUI/src/app/notifyleave/notifyleave.component.css
@@ -22,7 +22,9 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   -webkit-appearance: none;
 }
 
-
+.alert{
+  margin-top:60px;
+}
 
 .start-date-icon {
   position: absolute;
