--- a/LeaveAppUI/src/app/navbar/navbar.component.html
+++ b/LeaveAppUI/src/app/navbar/navbar.component.html
@@ -10,6 +10,7 @@
       <div class="navbar-nav d-flex gap-3">
         <a class="nav-link active fw-bold" aria-current="page" href="/notifyleave">Home</a>
         <a class="nav-link fw-bold" href="/pending">Leave Request</a>
+        <a class="nav-link fw-bold" href="/calendar">Go to calendar</a>
       </div>
     </div>
   </div>
